--- a/index.html
+++ b/index.html
@@ -707,12 +707,14 @@
             }
             .search-container.active {
                 display: flex;
+                z-index: 1002;
             }
 
             #searchInput {
                 width: 100%;
                 padding: 0.8rem 1rem;
                 font-size: 1rem;
+                touch-action: manipulation;
             }
 
             .search-suggestions {
